--- a/css/mobile.css
+++ b/css/mobile.css
@@ -3,9 +3,31 @@
 @media screen and (max-width: 601px) {
     nav{
         text-align: center;
+        margin-bottom: 10px;
     }
 
-    ul#opcoes{
+    nav > div#opcoes a, div#linkCategorias{
+        padding: 10px;
+        border-radius: 0px;
+        cursor: pointer;
+        margin: 10px 0px;
+        width: 100%;
+    }
+
+    /* nav > div#opcoes a:hover, div#linkCategorias:hover{
+        background-color: white;
+        color: black;
+    } */
+
+    div#linkCategorias:hover div#categorias{
+        display: none;
+    }
+
+    div#linkCategorias div#categorias{
+        display: none;
+    }
+
+    div#opcoes{
         display: none;
     }
 
@@ -15,5 +37,13 @@
         height: 40px;  
         padding: 10px;
         margin: 5px;
+    }
+
+    main article{
+        max-height: 400px;
+    }
+
+    .produto p{
+        font-size: 12.5px;
     }
 }
