--- a/css/style.css
+++ b/css/style.css
@@ -89,10 +89,6 @@ div  a{
     color: white;
 }
 
-div a#a_produtos{
-    cursor: default;
-}
-
 div a#a_produtos:hover{
     background-color: black;
 }
@@ -182,3 +178,11 @@ img{
     width: 100px;
     margin-bottom: 5px;
 }
+
+/* .articleCategory section{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 10px 0px;
+} */
