--- a/css/style.css
+++ b/css/style.css
@@ -107,8 +107,12 @@ header div#divHeader div#btnLogin{
     display: flex;
     align-items: center;
     margin-right: 20px;
-    padding: 10px 10px;
+    padding: 10px 10px; 
     border-radius: 15px;
+}
+
+div#btnLogin a{
+    padding: 0px !important;
 }
 
 header div#divHeader div#btnLogin:hover{
