Adicionado o mostrar produto específico e alguns ajustes

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -46,4 +46,12 @@
     .produto p{
         font-size: 12.5px;
     }
+
+    .btn_carrinho{
+        padding: 5px;
+    }
+
+    .btnComprar{
+        font-size: 0.9em !important;
+    }
 }
